--- a/package.json
+++ b/package.json
@@ -15,5 +15,37 @@
   "bugs": {
     "url": "https://github.com/Jmgucciardi/appify/issues"
   },
-  "homepage": "https://github.com/Jmgucciardi/appify#readme"
+  "homepage": "https://github.com/Jmgucciardi/appify#readme",
+  "dependencies": {
+    "babel-loader": "^7.1.3",
+    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.8",
+    "next": "^5.0.0",
+    "next-redux-wrapper": "^1.3.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
+    "path": "^0.12.7",
+    "react": "^16.2.0",
+    "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-react": "^7.7.0",
+    "unit-coverage": "^4.0.3"
+  }
 }
