--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport.socketio": "^3.7.0",
     "path": "^0.12.7",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
