--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.8",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
+    "npm": "^5.7.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
