--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
+    "logger": "0.0.1",
     "mongoose": "^5.0.8",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
