--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.2.0",
     "logger": "0.0.1",
     "mongoose": "^5.0.8",
+    "morgan": "^1.9.0",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "npm": "^5.7.1",
