--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
