testing login logic, then install JWT

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-sidebar": "^2.3.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
