--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins": [
     "syntax-async-functions",
     "transform-object-rest-spread",
+    "transform-decorators-legacy"
   ],
   "presets": [
     "es2015",
