--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "morgan": "^1.9.0",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
-    "npm": "^5.7.1",
+    "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.1",
+    "radium": "^0.23.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -58,6 +59,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
