--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
     "logger": "0.0.1",
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^0.20.0",
     "mongoose": "^5.0.8",
     "morgan": "^1.9.0",
     "next": "^5.0.0",
@@ -45,6 +47,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-sidebar": "^2.3.2",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
