--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prop-types": "^15.6.1",
     "radium": "^0.23.0",
     "react": "^16.2.0",
+    "react-cookie": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-sidebar": "^2.3.2",
