--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
